styles/style.css
.html {
    min-width: 600px;
}
.zcenterDiv {
    width:500px;
    margin: 0 auto;
}

.mainGrid {
    display: flex;
    justify-content: space-around;
}

.gridContainer {
    background: black;
    margin: 0 auto;
    border: 10px solid #4d88ff;
    display: grid;
    grid-template-columns: repeat(16, auto);
    height: 450px;
    width: 500px;
}


.sketchAlter {
    padding: 1rem;
    font-size: 1rem;
    margin-bottom: 10px;
    

}

.inputColor {
    padding: 1.5rem;
    border: solid grey;;
    border-radius: 25%;
    margin-bottom: 10px;
}


body {
    background: rgb(78, 78, 78);
}

.sketchButtons {
    text-align: center;
}

.leftDiv {
    margin-top: 30px;
    font-family: 'Dancing Script', cursive;
    height: 500px;
    width: 250px;
    display: flex;
    align-items: center;
    text-align: center;
    color: white;
    font-size: 75px;
    
}

.rightDiv {
    margin-top: 30px;
    font-family: 'Dancing Script', cursive;
    height: 500px;
    width: 250px;
    display: flex;
    align-items: center;
    text-align: center;
    color: white;
    font-size: 75px;

}

.author {
    padding: 5px;
    width:100%;
    text-align: center;
    color: rgb(230,230,230); 
}

